--- a/index2.html
+++ b/index2.html
@@ -30,8 +30,9 @@
         <img id="cubes-thumb" crossorigin="anonymous" src="puydesancy.jpg">
         <img id="sechelt-thumb" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/thumb-sechelt.jpg">
         <audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
+        <audio id="click-sound" crossorigin="anonymous" src="orion.ogg"></audio>
         <img id="cubes" crossorigin="anonymous" src="puydesancy.jpg">
-        <img id="sechelt" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
+        <img id="sechelt" crossorigin="anonymous" src="puydesancy.webp">
 
       </a-assets>
 
