--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,7 @@
         <audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
         <audio id="click-sound1" crossorigin="anonymous" src="orion.ogg"></audio>
         <img id="cubes" crossorigin="anonymous" src="puydesancy.jpg">
-        <img id="sechelt" crossorigin="anonymous" src="puydesancy3.webp">
+        <img id="sechelt" crossorigin="anonymous" src="puydesancy2.jpg">
 
       </a-assets>
 
