--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>360&deg; Image Gallery</title>
+    <title>Orion</title>
     <meta name="description" content="360&deg; Image Gallery - A-Frame">
     <script src="js/aframe.min.js"></script>
     <script src="js/aframe-event-set-component.min.js"></script>
