--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                <br>
               		<audio controls>
-   				 <source src="orion.ogg" type="orion-estrellas/ogg">
+   				 <source src="orion_estrellas.ogg" type="audio/ogg">
      			 Tu navegador no soporta audio HTML5.
 			</audio>
               </p>
