--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                <br>
              		<audio controls>
-   				 <source src="orion-estrellas.ogg" type="audio/ogg">
+   				 <source src="oriontauro.ogg" type="audio/ogg">
      			 Tu navegador no soporta audio HTML5.
 			</audio>
               </p>
