--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <a  onclick="mensaje('Orión, hijo de Poseidón y Euríale, princesa de Creta, nació en Beocia. El gran cazador se jactaba de ser capaz de matar a todas las bestias de la Tierra.\n Gea, la Madre Tierra, se alarmó y le envió un escorpión, que acabó con su vida al picarle en el pie. Las diosas le pidieron entonces a Zeus que pusiera a Orión entre las estrellas y así hizo, también con el escorpión.\n Cuando vemos a Orión en en cielo, en invierno, no vemos a Escorpio; y cuando sale Escorpio, Orión se oculta en el cielo, como si estuviese permanentemente huyendo de él.','Orión y Escorpio','img/2.jpg')" class="btn-large blue ">Orión y Escorpio</a> <br>
                <br>
          		<audio controls>
-   				 <source src="orion-escorpion.ogg" type="audio/ogg">
+   				 <source src="orion-escorpion.wav" type="audio/wav">
      			 Tu navegador no soporta audio HTML5.
 			</audio>
               </p>
@@ -116,7 +116,7 @@
 
                <br>
              		<audio controls>
-   				 <source src="oriontauro.ogg" type="audio/ogg">
+   				 <source src="orion-tauro.wav" type="audio/wav">
      			 Tu navegador no soporta audio HTML5.
 			</audio>
               </p>
@@ -129,7 +129,7 @@
 
                <br>
               		<audio controls>
-   				 <source src="orion_estrellas.ogg" type="audio/ogg">
+   				 <source src="orion_estrellas.wav" type="audio/wav">
      			 Tu navegador no soporta audio HTML5.
 			</audio>
               </p>
